lab5/typescript
Script started on Thu Nov  8 23:48:13 2018
[?1034hbash-3.2$ make
g++ -c -Wall songmain.cpp
[1msongmain.cpp:43:9: [0m[0;1;31merror: [0m[1mredefinition of 'size'[0m
    int size;
[0;1;32m        ^
[0m[1msongmain.cpp:41:9: [0m[0;1;30mnote: [0mprevious definition is here[0m
    int size = askNumberOfSong();
[0;1;32m        ^
[0m[1msongmain.cpp:45:21: [0m[0;1;31merror: [0m[1mredefinition of 'i'[0m
    for (int i = 0, i < size, i++){
[0;1;32m                    ^
[0m[1msongmain.cpp:45:14: [0m[0;1;30mnote: [0mprevious definition is here[0m
    for (int i = 0, i < size, i++){
[0;1;32m             ^
[0m[1msongmain.cpp:45:23: [0m[0;1;31merror: [0m[1mexpected ';' in 'for' statement specifier[0m
    for (int i = 0, i < size, i++){
[0;1;32m                      ^
[0m[1msongmain.cpp:45:23: [0m[0;1;31merror: [0m[1mexpected expression[0m
4 errors generated.
make: *** [songmain.o] Error 1
bash-3.2$ ls[K[Kexit
exit

Script done on Thu Nov  8 23:50:25 2018
